--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,5 @@
-# Edit following two lines to set component requirements (see docs)
 set(COMPONENT_REQUIRES)
-set(COMPONENT_PRIV_REQUIRES audio_sal audio_hal esp_dispatcher esp_peripherals display_service)
+set(COMPONENT_PRIV_REQUIRES audio_sal audio_hal esp_dispatcher esp_peripherals display_service usb_device_uac)
 
 if(CONFIG_AUDIO_BOARD_CUSTOM)
 message(STATUS "Current board name is ESP32-S3-Box-3")
@@ -15,3 +14,6 @@ register_component()
 
 idf_component_get_property(audio_board_lib audio_board COMPONENT_LIB)
 set_property(TARGET ${audio_board_lib} APPEND PROPERTY INTERFACE_LINK_LIBRARIES ${COMPONENT_LIB})
+
+# Add the directory containing the usb_device_uac component
+list(APPEND EXTRA_COMPONENT_DIRS ${CMAKE_SOURCE_DIR}/components/usb_device_uac)
